feat: Refactor LeagueLifecycleE2ETest for improved readability and update package.json dependencies